@@ -6,6 +6,7 @@ $Id$
 	* fix for BUG#411: memory leak in do_init()
         * fix for BUG#412: check whether resolv.conf has changed
 	* fix for BUG#412: don't close nested contexts
+	* fix for BUG#412: make syslog debugging configurable
 
 265	Luke Howard <lukeh@padl.com>
 
